--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@apollo/server": "^4.9.3",
     "@devoxa/prisma-relay-cursor-connection": "^3.1.0",
-    "@nestjs/apollo": "^12.0.9",
-    "@nestjs/common": "^10.0.0",
+    "@graphql-yoga/nestjs": "^2.1.1",
+    "@nestjs/common": "^10.2.6",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.2.6",
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.12",
     "@prisma/client": "^5.3.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-yoga": "^4.0.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
